[project]
name = "assignement-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.8.6",
    "ddgs>=9.14.4",
    "fastapi>=0.110",
    "httpx>=0.27",
    "jsonschema>=4.21",
    "mcp>=1.27.1",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "tavily-python>=0.7.24",
    "uvicorn[standard]>=0.27",
]
